// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.api.service.webservice;
option go_package = "github.com/kapetaniosci/pipe/pkg/app/api/service/webservice";

import "validate/validate.proto";
import "pkg/model/application_live_state.proto";
import "pkg/model/deployment.proto";
import "pkg/model/logblock.proto";

// WebService contains all RPC definitions for web client.
// All of these RPCs are only called by web client and authenticated by using ID_TOKEN.
service WebService {
    // Environment
    rpc AddEnvironment(AddEnvironmentRequest) returns (AddEnvironmentResponse) {}
    rpc UpdateEnvironmentDesc(UpdateEnvironmentDescRequest) returns (UpdateEnvironmentDescResponse) {}
    rpc ListEnvironments(ListEnvironmentsRequest) returns (ListEnvironmentsResponse) {}

    // Piped
    rpc RegisterPiped(RegisterPipedRequest) returns (RegisterPipedResponse) {}
    rpc DisablePiped(DisablePipedRequest) returns (DisablePipedResponse) {}
    rpc ListPipeds(ListPipedsRequest) returns (ListPipedsResponse) {}

    // Application
    rpc AddApplication(AddApplicationRequest) returns (AddApplicationResponse) {}
    rpc DisableApplication(DisableApplicationRequest) returns (DisableApplicationResponse) {}
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {}
    rpc SyncApplication(SyncApplicationRequest) returns (SyncApplicationResponse) {}

    // Deployment
    rpc ListDeployments(ListDeploymentsRequest) returns (ListDeploymentsResponse) {}
    rpc GetDeployment(GetDeploymentRequest) returns (GetDeploymentResponse) {}
    rpc GetStageLog(GetStageLogRequest) returns (GetStageLogResponse) {}
    rpc CancelDeployment(CancelDeploymentRequest) returns (CancelDeploymentResponse) {}
    rpc ApproveStage(ApproveStageRequest) returns (ApproveStageResponse) {}

    // ApplicationLiveState
    rpc GetApplicationLiveState(GetApplicationLiveStateRequest) returns (GetApplicationLiveStateResponse) {}
    
    // Account
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}
    rpc GetMe(GetMeRequest) returns (GetMeResponse) {}
}

message AddEnvironmentResponse {
}

message UpdateEnvironmentDescRequest {
}

message UpdateEnvironmentDescResponse {
}

message ListEnvironmentsRequest {
}

message ListEnvironmentsResponse {
}

message RegisterPipedRequest {
}

message RegisterPipedResponse {
}

message DisablePipedRequest {
}

message DisablePipedResponse {
}

message ListPipedsRequest {
}

message ListPipedsResponse {
}

message AddEnvironmentRequest {
}

message AddApplicationRequest {
}

message AddApplicationResponse {
}

message DisableApplicationRequest {
}

message DisableApplicationResponse {
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
}

message SyncApplicationRequest {
}

message SyncApplicationResponse {
}

message ListDeploymentsRequest {
}

message ListDeploymentsResponse {
}

message GetDeploymentRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
}

message GetDeploymentResponse {
    pipe.model.Deployment deployment = 1;
}

message GetStageLogRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    int32 retried_count = 3;
    int64 offset_timestamp = 4;
}

message GetStageLogResponse {
    repeated pipe.model.LogBlock blocks = 1;
    bool completed = 2;
}

message CancelDeploymentRequest {
}

message CancelDeploymentResponse {
}

message ApproveStageRequest {
}

message ApproveStageResponse {
}

message GetApplicationLiveStateRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
}

message GetApplicationLiveStateResponse {
    pipe.model.ApplicationLiveState state= 1;
}

message GetProjectRequest {
}

message GetProjectResponse {
}

message GetMeRequest {
}

message GetMeResponse {
}
